<resources>

    <string name="app_name">ProjectG</string>

    <!--for main tabs -->
    <string name="tab1">MAP</string>
    <string name="tab2">TIMELINE</string>
    <string name="tab3">NOTICES</string>
    <string name="tab4">PROFILE</string>
    <string name="tab5">CAMERA</string>


    <!-- strings use in java class  -->
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="permi">This application need some permissions to work</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>

    <!-- strings use manifests  -->
    <string name="title_activity_login_fragment">Sign in</string>
    <string name="title_activity_add_event">AddEventActivity</string>

    <!-- strings use in layout of  login & registration -->
    <string name="app_id">1297114583737176</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_Skip">Skip Login</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="title_birth">Birthday</string>
    <string name="action_regi">Register With ProjectX </string>
    <string name="action_save">Save</string>
    <string name="Phone">Phone Number</string>
    <string name="pref_user_name">Username</string>
    <string name="forget"><u> Forget Password </u> </string>
    <string name="singup"><u> Sign up </u> </string>

    <!-- strings for layout add event -->
    <string name="get_location">GPS Location</string>
    <string name="location_address">Location Address</string>
    <string name="location_name">Location Name</string>

    <!-- strings for TimeLine (Home) -->
    <string name="event_type">event type</string>
    <string name="account_name">user name</string>
    <string name="description">A description is a phrase or sentence that tells you what something is,
     </string>
    <string name="number_comment">0 Coments</string>
    <string name="number_like">0 Likes</string>
    <string name="number_share">0 Shares</string>

    <!-- strings for profiles -->
    <string name="event">EVENTS</string>
    <string name="number_event">0</string>
    <string name="followers">FOLLOWERS</string>
    <string name="number_followers">0</string>
    <string name="likes">LIKES</string>
    <string name="number_likes">0</string>
    <string name="edit_profile">EDIT PROFILES</string>


    <!-- strings for NAV -->

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_hjhjhjj">Map</string>


    <!-- strings for web -->


    <string name="web_refesh_error">Could not refresh feed</string>


</resources>
