<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Firebase.FireLogin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/logologin"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/emailetlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <EditText
                    android:id="@+id/passwordetlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout android:orientation="horizontal" android:layout_below="@id/email_login_form"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center">

                <Button
                    android:id="@+id/email_sign_up_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="160dp"
                    android:layout_below="@id/email_login_form"
                    android:layout_gravity="center_horizontal"
                     android:text="@string/singup"
                    android:background="@color/white"
                    />
                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_toRightOf="@id/email_sign_up_button"
                    android:layout_below="@id/email_login_form"
                    android:layout_gravity="center_horizontal"
                     android:text="@string/action_sign_in"
                    android:background="@color/colorAccent"
                    android:textColor="@color/white"

                    />
            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="70dp"
                android:layout_weight="0.13" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/g_sign_in_button"
                android:layout_width="187dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center" />



            <TextView
                android:id="@+id/forget_pass_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center|bottom"
                android:text="@string/forget"


                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
